perf: streamline browser XStream ID marshalling